fix: left align icons on hover expansion

--- a/src/app/components/layout-component/layout-component.scss
+++ b/src/app/components/layout-component/layout-component.scss
@@ -40,6 +40,9 @@ aside:not(.collapsed) .nav-link {
   aside.collapsed:hover {
     width: 16rem;
   }
+  aside.collapsed:hover nav {
+    @apply items-start;
+  }
   aside.collapsed:hover .nav-text {
     display: inline;
   }
